--- a/src/index.pug
+++ b/src/index.pug
@@ -9,4 +9,11 @@ append meta
 
 block content
     section.container
-        
+        article(class="card" style="width: 18rem")
+            img(class="card-img-top" src="https://erotismosexual.com/wp-content/uploads/2019/02/kendra-lust.jpg" alt="" srcset="")
+            .card-body
+                h1.card-title Nombre de la actriz
+                p.card-text Descripción breve y sensual de la tarjeta de presentación de catálogo
+                a(href="" target="_blank" class="btn btn-primary")
+                    i(class="bi bi-cart-check-fill")
+                    | Link
