--- a/src/index.pug
+++ b/src/index.pug
@@ -41,3 +41,19 @@ block content
                 a(href="" target="_blank" class="btn btn-primary")
                     i(class="bi bi-cart-check-fill")
                     | Adquierela aquí
+        article(class="card" style="width: 18rem")
+            img(class="card-img-top" src="https://www.mypornstarbook.net/pornstars/b/brandi_love/gallery136/images/02.jpg" alt="" srcset="")
+            .card-body
+                h1.card-title Kendra Lust
+                p.card-text Presentación de su nueva línea de lencería para que demuestres tu lado más candente y sensual
+                a(href="" target="_blank" class="btn btn-primary")
+                    i(class="bi bi-cart-check-fill")
+                    | Adquierela aquí
+        article(class="card" style="width: 18rem")
+            img(class="card-img-top" src="https://i.pinimg.com/564x/07/eb/8a/07eb8aeffcda6e5e9a3f37d0ab8b1b9d.jpg" alt="" srcset="")
+            .card-body
+                h1.card-title Kendra Lust
+                p.card-text Presentación de su nueva línea de lencería para que demuestres tu lado más candente y sensual
+                a(href="" target="_blank" class="btn btn-primary")
+                    i(class="bi bi-cart-check-fill")
+                    | Adquierela aquí
