--- a/src/index.pug
+++ b/src/index.pug
@@ -16,21 +16,21 @@ block content
             div(class="collapse navbar-collapse" id="navbarSupportedContent")
                 ul(class="navbar-nav me-auto mb-2 mb-lg-0")
                     li(class="nav-item")
-                        a(class="nav-link active" aria-current="page" href="#") Home
+                        a(class="nav-link active" aria-current="page" href="#") Inicia
                     li(class="nav-item")
-                        a(class="nav-link" href="#") Link
+                        a(class="nav-link" href="#") Enlace
                     li(class="nav-item dropdown")
-                        a(class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false") Dropdown
+                        a(class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false") + Menú
                         ul(class="dropdown-menu" aria-labelledby="navbarDropdown")
                             li: a(class="dropdown-item" href="#") Action
                             li: a(class="dropdown-item" href="#") Another action
                             li: hr(class="dropdown-divider")
                             li: a(class="dropdown-item" href="#") Something else here
                     li(class="nav-item")
-                        a(class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true") Disabled
+                        a(class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true") No disponible
                 form(class="d-flex")
                     input(class="form-control me-2" type="search" placeholder="Search" aria-label="Search")
-                    button(class="btn btn-outline-success" type="submit") Search
+                    button(class="btn btn-outline-success" type="submit") Búsqueda
 
     section.container   
         article(class="card" style="width: 18rem")
