--- a/src/index.pug
+++ b/src/index.pug
@@ -9,6 +9,7 @@ append meta
 
 block content
     section.container
+        h1.text-center Catálogo de Lencería, antes del stash
         article(class="card" style="width: 18rem")
             img(class="card-img-top" src="https://cdni.pornpics.com/1280/5/201/75758265/75758265_001_a654.jpg" alt="" srcset="")
             .card-body
