--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,6 +3,12 @@
 @import 'config/breakpoints';
 @import 'config/base';
 
+.text-center {
+    font-size   : 24px;
+    font-weight : 600;
+    grid-column git commi: span 4;
+}
+
 .container {
     gap                   : 8px;
     display               : grid;
