integrando el stash

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,9 +4,10 @@
 @import 'config/base';
 
 .text-center {
+    margin      : 8px 0;
     font-size   : 24px;
     font-weight : 600;
-    grid-column: span 4;
+    grid-column : span 4;
 }
 
 .container {
