--- a/src/index.pug
+++ b/src/index.pug
@@ -8,6 +8,30 @@ append meta
     - StyleSheet = 'index'
 
 block content
+    nav(class="navbar navbar-expand-lg navbar-light bg-light")
+        div(class="container-fluid")
+            a(class="navbar-brand" href="#") Gity GitHub
+            button(class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
+                span(class="navbar-toggler-icon")
+            div(class="collapse navbar-collapse" id="navbarSupportedContent")
+                ul(class="navbar-nav me-auto mb-2 mb-lg-0")
+                    li(class="nav-item")
+                        a(class="nav-link active" aria-current="page" href="#") Inicia
+                    li(class="nav-item")
+                        a(class="nav-link" href="#") Enlace
+                    li(class="nav-item dropdown")
+                        a(class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false") + Menú
+                        ul(class="dropdown-menu" aria-labelledby="navbarDropdown")
+                            li: a(class="dropdown-item" href="#") Action
+                            li: a(class="dropdown-item" href="#") Another action
+                            li: hr(class="dropdown-divider")
+                            li: a(class="dropdown-item" href="#") Something else here
+                    li(class="nav-item")
+                        a(class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true") No disponible
+                form(class="d-flex")
+                    input(class="form-control me-2" type="search" placeholder="Search" aria-label="Search")
+                    button(class="btn btn-outline-success" type="submit") Búsqueda
+
     section.container
         h1.text-center Catálogo de Lencería, antes del stash
         article(class="card" style="width: 18rem")
