actualizacion de estilos v0.1

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,7 +6,7 @@
 .text-center {
     font-size   : 24px;
     font-weight : 600;
-    grid-column git commi: span 4;
+    grid-column : span 4;
 }
 
 .container {
